[gd_scene load_steps=5 format=2]

[ext_resource path="res://Derp_Star/derp_star.png" type="Texture" id=1]
[ext_resource path="res://Derp_Star/Thruster.tscn" type="PackedScene" id=2]
[ext_resource path="res://Derp_Star/Derp_Star.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 99.0453

[node name="Derp_Star" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Thruster1" parent="." instance=ExtResource( 2 )]
position = Vector2( -4.24261, 102.879 )
rotation = -1.5708

[node name="Thruster2" parent="." instance=ExtResource( 2 )]
position = Vector2( -95.4594, 41.0122 )
rotation = -0.380482

[node name="Thruster3" parent="." instance=ExtResource( 2 )]
position = Vector2( -65.0538, -77.7817 )
rotation = 0.888372

[node name="Thruster4" parent="." instance=ExtResource( 2 )]
position = Vector2( 77.7817, -67.8822 )
rotation = -3.74548

[node name="Thruster5" parent="." instance=ExtResource( 2 )]
position = Vector2( 92.631, 43.1335 )
rotation = -2.66512

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
